refactor: 저장된 가게 관련 디렉터리 구조 리펙터링