@@ -1,4 +1,4 @@
-package org.swyp.dessertbee.store.store.service;
+package org.swyp.dessertbee.store.saved.service;
 
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
@@ -8,27 +8,24 @@ import org.springframework.transaction.annotation.Transactional;
 import org.swyp.dessertbee.common.entity.ImageType;
 import org.swyp.dessertbee.statistics.store.entity.enums.SaveAction;
 import org.swyp.dessertbee.statistics.store.event.StoreSaveActionEvent;
+import org.swyp.dessertbee.store.saved.dto.*;
 import org.swyp.dessertbee.store.store.exception.StoreExceptions.*;
-import org.swyp.dessertbee.store.store.exception.UserStoreExceptions.*;
+import org.swyp.dessertbee.store.saved.exception.UserStoreExceptions.*;
 import org.swyp.dessertbee.user.exception.UserExceptions.*;
 import org.swyp.dessertbee.common.service.ImageService;
-import org.swyp.dessertbee.store.store.dto.response.SavedStoreResponse;
-import org.swyp.dessertbee.store.store.dto.response.StoreListLocationResponse;
-import org.swyp.dessertbee.store.store.dto.response.UserStoreListResponse;
-import org.swyp.dessertbee.store.store.dto.response.UserStoreListSimpleResponse;
-import org.swyp.dessertbee.store.store.entity.SavedStore;
+import org.swyp.dessertbee.store.saved.entity.SavedStore;
 import org.swyp.dessertbee.store.store.entity.Store;
-import org.swyp.dessertbee.store.store.entity.UserStoreList;
-import org.swyp.dessertbee.store.store.repository.SavedStoreRepository;
+import org.swyp.dessertbee.store.saved.entity.UserStoreList;
+import org.swyp.dessertbee.store.saved.repository.SavedStoreRepository;
 import org.swyp.dessertbee.store.store.repository.StoreRepository;
-import org.swyp.dessertbee.store.store.repository.UserStoreListRepository;
+import org.swyp.dessertbee.store.saved.repository.UserStoreListRepository;
 import org.swyp.dessertbee.user.entity.UserEntity;
 import org.swyp.dessertbee.user.repository.UserRepository;
 import org.swyp.dessertbee.user.service.UserService;
 
-import java.time.LocalDateTime;
 import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 import java.util.UUID;
 import java.util.stream.Collectors;
 
@@ -48,31 +45,36 @@ public class UserStoreServiceImpl implements UserStoreService {
 
     /** 저장 리스트 전체 조회 */
     @Override
-    public List<UserStoreListResponse> getUserStoreLists(UUID userUuid) {
-        try{
+    public List<UserStoreListSummaryResponse> getUserStoreLists(UUID userUuid) {
+        try {
             Long userId = userRepository.findIdByUserUuid(userUuid);
             if (userId == null) {
                 throw new InvalidUserUuidException();
             }
 
             UserEntity user = userRepository.findById(userId)
-                    .orElseThrow(() -> new UserNotFoundException());
+                    .orElseThrow(UserNotFoundException::new);
 
             List<UserStoreList> lists = userStoreListRepository.findByUser(user);
+            List<StoreListLocationResponse> allLocations = savedStoreRepository.findAllLocationByUserId(userId);
+
+            Map<Long, List<StoreListLocationResponse>> grouped = allLocations.stream()
+                    .collect(Collectors.groupingBy(StoreListLocationResponse::getListId));
 
             return lists.stream()
-                    .map(list -> UserStoreListResponse.builder()
+                    .map(list -> UserStoreListSummaryResponse.builder()
                             .listId(list.getId())
                             .userUuid(userUuid)
                             .listName(list.getListName())
                             .iconColorId(list.getIconColorId())
-                            .storeCount(savedStoreRepository.countByUserStoreList(list))
-                            .storeData(Collections.emptyList())
+                            .storeCount(grouped.getOrDefault(list.getId(), List.of()).size())
+                            .storeData(grouped.getOrDefault(list.getId(), List.of()))
                             .build())
                     .collect(Collectors.toList());
+
         } catch (Exception e) {
-            log.error("저장 리스트 생성 처리 중 오류 발생", e);
-            throw new UserStoreServiceException("저장 리스트 생성 처리 중 오류가 발생했습니다.");
+            log.error("저장 리스트 전체 조회 처리 중 오류 발생", e);
+            throw new UserStoreServiceException("저장 리스트 전체 조회 처리 중 오류가 발생했습니다.");
         }
     }
 
@@ -80,13 +82,13 @@ public class UserStoreServiceImpl implements UserStoreService {
     @Override
     public UserStoreListSimpleResponse getUserStoreList(Long listId) {
         try{
-            UserStoreList userStoreList = userStoreListRepository.findById(listId)
-                    .orElseThrow(() -> new StoreListNotFoundException());
+            UserStoreList list = userStoreListRepository.findById(listId)
+                    .orElseThrow(StoreListNotFoundException::new);
 
             return UserStoreListSimpleResponse.builder()
-                    .listId(userStoreList.getId())
-                    .listName(userStoreList.getListName())
-                    .iconColorId(userStoreList.getIconColorId())
+                    .listId(list.getId())
+                    .listName(list.getListName())
+                    .iconColorId(list.getIconColorId())
                     .build();
         } catch (Exception e) {
             log.error("저장 리스트 생성 처리 중 오류 발생", e);
@@ -96,18 +98,18 @@ public class UserStoreServiceImpl implements UserStoreService {
 
     /** 저장 리스트 생성 */
     @Override
-    public UserStoreListResponse createUserStoreList(UUID userUuid, String listName, Long iconColorId) {
+    public UserStoreListSummaryResponse createUserStoreList(UUID userUuid, String listName, Long iconColorId) {
         try{
             Long userId = userRepository.findIdByUserUuid(userUuid);
             if (userId == null) {
                 throw new InvalidUserUuidException();
             }
 
+
             UserEntity user = userRepository.findById(userId)
-                    .orElseThrow(() -> new UserNotFoundException());
+                    .orElseThrow(UserNotFoundException::new);
 
             boolean nameExists = userStoreListRepository.existsByUserAndListName(user, listName);
-
             if (nameExists) {
                 throw new DuplicateListNameException();
             }
@@ -120,13 +122,13 @@ public class UserStoreServiceImpl implements UserStoreService {
                             .build()
             );
 
-            return UserStoreListResponse.builder()
+            return UserStoreListSummaryResponse.builder()
                     .listId(newList.getId())
                     .userUuid(userUuid)
                     .listName(newList.getListName())
                     .iconColorId(newList.getIconColorId())
                     .storeCount(0)
-                    .storeData(Collections.emptyList()) // 저장된 가게 정보가 없으므로 빈 리스트 설정
+                    .storeData(Collections.emptyList())
                     .build();
         } catch (ListCreationFailedException e){
             log.warn("저장 리스트 생성 실패 - 사유: {}", e.getMessage());
@@ -139,15 +141,15 @@ public class UserStoreServiceImpl implements UserStoreService {
 
     /** 저장 리스트 수정 */
     @Override
-    public UserStoreListResponse updateUserStoreList(Long listId, String newName, Long newIconColorId) {
+    public UserStoreListSummaryResponse updateUserStoreList(Long listId, String newName, Long newIconColorId) {
         try{
             UserStoreList list = userStoreListRepository.findById(listId)
-                    .orElseThrow(() -> new StoreListNotFoundException());
+                    .orElseThrow(StoreListNotFoundException::new);
 
             list.updateList(newName, newIconColorId);
             userStoreListRepository.save(list);
 
-            return UserStoreListResponse.builder()
+            return UserStoreListSummaryResponse.builder()
                     .listId(list.getId())
                     .userUuid(list.getUser().getUserUuid())
                     .listName(list.getListName())
@@ -169,7 +171,7 @@ public class UserStoreServiceImpl implements UserStoreService {
     public void deleteUserStoreList(Long listId) {
         try{
             UserStoreList list = userStoreListRepository.findById(listId)
-                    .orElseThrow(() -> new StoreListNotFoundException());
+                    .orElseThrow(StoreListNotFoundException::new);
 
             // 리스트 내 저장된 가게 삭제
             savedStoreRepository.deleteByUserStoreList(list);
@@ -190,7 +192,7 @@ public class UserStoreServiceImpl implements UserStoreService {
     public SavedStoreResponse addStoreToList(Long listId, UUID storeUuid, List<Long> userPreferences) {
         try{
             UserStoreList list = userStoreListRepository.findById(listId)
-                    .orElseThrow(() -> new StoreListNotFoundException());
+                    .orElseThrow(StoreListNotFoundException::new);
 
             Long storeId = storeRepository.findStoreIdByStoreUuid(storeUuid);
             if (storeId == null) {
@@ -198,7 +200,7 @@ public class UserStoreServiceImpl implements UserStoreService {
             }
 
             Store store = storeRepository.findById(storeId)
-                    .orElseThrow(() -> new StoreNotFoundException());
+                    .orElseThrow(StoreNotFoundException::new);
 
             // 이미 리스트에 존재하는 가게인지 확인
             boolean exists = savedStoreRepository.findByUserStoreListAndStore(list, store).isPresent();
@@ -247,11 +249,11 @@ public class UserStoreServiceImpl implements UserStoreService {
 
     /** 리스트별 저장된 가게 조회 */
     @Override
-    public UserStoreListResponse getStoresByList(Long listId) {
+    public UserStoreListDetailResponse getStoresByList(Long listId) {
         try{
             // 리스트 엔티티 조회
             UserStoreList list = userStoreListRepository.findById(listId)
-                    .orElseThrow(() -> new StoreListNotFoundException());
+                    .orElseThrow(StoreListNotFoundException::new);
 
             // 해당 리스트에 저장된 가게 정보 매핑
             List<SavedStoreResponse> storeData = savedStoreRepository.findByUserStoreList(list).stream()
@@ -271,7 +273,7 @@ public class UserStoreServiceImpl implements UserStoreService {
 
             int storeCount = storeData.size();
 
-            return UserStoreListResponse.builder()
+            return UserStoreListDetailResponse.builder()
                     .listId(list.getId())
                     .userUuid(list.getUser().getUserUuid())
                     .listName(list.getListName())
@@ -290,7 +292,7 @@ public class UserStoreServiceImpl implements UserStoreService {
     public void removeStoreFromList(Long listId, UUID storeUuid) {
         try{
             UserStoreList list = userStoreListRepository.findById(listId)
-                    .orElseThrow(() -> new StoreListNotFoundException());
+                    .orElseThrow(StoreListNotFoundException::new);
 
             Long storeId = storeRepository.findStoreIdByStoreUuid(storeUuid);
             if (storeId == null) {
@@ -298,10 +300,10 @@ public class UserStoreServiceImpl implements UserStoreService {
             }
 
             Store store = storeRepository.findById(storeId)
-                    .orElseThrow(() -> new StoreNotFoundException());
+                    .orElseThrow(StoreNotFoundException::new);
 
             SavedStore savedStore = savedStoreRepository.findByUserStoreListAndStore(list, store)
-                    .orElseThrow(() -> new SavedStoreNotFoundException());
+                    .orElseThrow(SavedStoreNotFoundException::new);
 
             UserEntity user = userService.getCurrentUser();
 
